# bazel-nuxt

./: BUILD.bazel  nuxt.config.js
