load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "npm_package_bin")
load("@npm//nuxt:index.bzl", "nuxt")

filegroup(
    name = "nuxt-srcs",
    srcs =
        ["nuxt.config.js"] +
        glob(
            [
                "assets/**",
                "components/**/*.vue",
                "layouts/*.vue",
                "middleware/*.js",
                "pages/**/*.vue",
                "plugins/*.js",
                "static/*",
                "store/*.js",
            ],
            # specifically exclude test files
            exclude = [
            ],
        ),
)

filegroup(
    name = "package_json",
    srcs = ["package.json"],
)

## generate the dist/ directory
nuxt(
    name = "dist",
    args = [
        "generate",
        # Workaround https://cmty.app/nuxt/nuxt.js/issues/c9861
        # nuxt has no such option, but our nuxt.config.js will read this
        "--buildDir=$@",
    ],
    data = [
        ":nuxt-srcs",
        ":package_json",
        "@npm//:node_modules",
    ],
    output_dir = True,
)

## run in production mode the generated directory
nuxt(
    name = "nuxt_start",
    args = [
        "start",
    ],
    data = [
        ":dist",
        "@npm//:node_modules",
    ],
)
